--- a/2_automation/web-conf.yml
+++ b/2_automation/web-conf.yml
@@ -23,9 +23,9 @@
        path: "/root/host"
        state: directory
 
-   - name: Copying the HTML code in the Directory
+   - name: Copying the project
      copy: 
-       src: "./index.html"
+       src: "./drop"
        dest: "/root/host"
 
    - name: Launching an HTTPD Container
